--- a/StoreFront.UI.MVC/appsettings.json
+++ b/StoreFront.UI.MVC/appsettings.json
@@ -1,12 +1,16 @@
 {
+  //"ConnectionStrings": {
+  //  "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-StoreFront.UI.MVC-B5832701-76AD-496A-9F3C-AED6329302CE;Trusted_Connection=True;MultipleActiveResultSets=true"
+  //},
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-StoreFront.UI.MVC-B5832701-76AD-496A-9F3C-AED6329302CE;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.\\sqlexpress;Database=StoreFront;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
-}
+
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "AllowedHosts": "*"
+  }
