--- a/StoreFront.UI.MVC/StoreFront.UI.MVC.csproj
+++ b/StoreFront.UI.MVC/StoreFront.UI.MVC.csproj
@@ -35,4 +35,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.9" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\StoreFront.DATA.EF\StoreFront.DATA.EF.csproj" />
+  </ItemGroup>
+
 </Project>
