--- a/StoreFront.UI.MVC/StoreFront.UI.MVC.csproj
+++ b/StoreFront.UI.MVC/StoreFront.UI.MVC.csproj
@@ -34,6 +34,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.10" />
     <PackageReference Include="NETCore.MailKit" Version="2.1.0" />
+    <PackageReference Include="x.pagedlist.mvc.core" Version="8.4.3" />
   </ItemGroup>
 
   <ItemGroup>
